--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ before_install:
   - docker build -t ddutjnrevenge-universe/react-test -f ./client/Dockerfile.dev ./client 
 
 script:
-  - docker run -e CI=true ddutjnrevenge-universe/react-test npm test
+  - docker run ddutjnrevenge-universe/react-test npm test -- --coverage
 
 after_success:
   - docker build -t ddutjnrevenge-universe/multi-client ./client
