modified travis yml

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,38 +1,23 @@
 version: '3'
 services:
   postgres:
-    image: "postgres:latest"
+    image: 'postgres:latest'
     environment:
       - POSTGRES_PASSWORD=postgres_password
   redis:
-    image: "redis:latest"
+    image: 'redis:latest'
   nginx:
+    depends_on:
+      - api
+      - client
     restart: always
     build:
       dockerfile: Dockerfile.dev
       context: ./nginx
     ports:
-      - "3050:80"
-    depends_on:
-      - api
-      - client
+      - '3050:80'
   api:
-    build: 
-      dockerfile: Dockerfile.dev
-      context: ./server
-    volumes:
-      - /app/node_modules
-      - ./server:/app
-    environment:
-      - REDIS_HOST=redis
-      - REDIS_PORT=6379
-      - PGUSER=postgres
-      - PGHOST=postgres
-      - PGDATABASE=postgres
-      - PGPASSWORD=postgres_password
-      - PGPORT=5432
-  server:
-    build: 
+    build:
       dockerfile: Dockerfile.dev
       context: ./server
     volumes:
@@ -47,14 +32,14 @@ services:
       - PGPASSWORD=postgres_password
       - PGPORT=5432
   client:
+    environment:
+      - WDS_SOCKET_PORT=0
     build:
       dockerfile: Dockerfile.dev
       context: ./client
     volumes:
       - /app/node_modules
       - ./client:/app
-    environment:
-      - WDS_SOCKET_PATH = 0
   worker:
     build:
       dockerfile: Dockerfile.dev
@@ -65,6 +50,3 @@ services:
     environment:
       - REDIS_HOST=redis
       - REDIS_PORT=6379
-
-      
-    
