modified nginx config

--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -2,8 +2,8 @@ upstream client {
     server client:3000;
 }
 
-upstream server {
-    server server:5000;
+upstream api {
+    server api:5000;
 }
 
 server {
@@ -22,6 +22,6 @@ server {
   
     location /api {
         rewrite /api/(.*) /$1 break;
-        proxy_pass http://server;
+        proxy_pass http://api;
     }
 }
