--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,6 @@
-language: generic
 sudo: required
+language: generic
+
 services:
   - docker
 
@@ -7,7 +8,7 @@ before_install:
   - docker build -t ddutjnrevenge-universe/react-test -f ./client/Dockerfile.dev ./client 
 
 script:
-  - docker run ddutjnrevenge-universe/react-test npm test -- --coverage
+  - docker run -e CI=true ddutjnrevenge-universe/react-test npm test
 
 after_success:
   - docker build -t ddutjnrevenge-universe/multi-client ./client
