--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -1,5 +1,5 @@
 FROM node:16-alpine as builder
-WORKDIR  '/app'
+WORKDIR '/app'
 COPY ./package.json ./
 RUN npm install
 COPY . .
@@ -7,5 +7,5 @@ RUN npm run build
 
 FROM nginx
 EXPOSE 3000
-COPY nginx/default.conf /etc/nginx/conf.d/default.conf
+COPY ./nginx/default.conf /etc/nginx/conf.d/default.conf
 COPY --from=builder /app/build /usr/share/nginx/html
