--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,7 @@ after_success:
   - docker build -t ddutjnrevenge-universe/multi-server ./server
   - docker build -t ddutjnrevenge-universe/multi-worker ./worker
   # Log in to the docker CLI
-  - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_ID" --password-stdin
+  - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_ID" docker.io --password-stdin
   # Take those images and push them to docker hub
   - docker push ddutjnrevenge-universe/multi-client
   - docker push ddutjnrevenge-universe/multi-nginx
