modified docker credential

--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,7 @@ after_success:
   - docker build -t ddutjnrevenge-universe/multi-nginx ./nginx
   - docker build -t ddutjnrevenge-universe/multi-server ./server
   - docker build -t ddutjnrevenge-universe/multi-worker ./worker
-  # Log in to the docker CLI
+  # Log in to the docker CLI (docker login)
   - echo "\$DOCKER_PASSWORD" | docker login -u "\$DOCKER_ID" --password-stdin
   # Take those images and push them to docker hub
   - docker push ddutjnrevenge-universe/multi-client
