--- a/.travis.yml
+++ b/.travis.yml
@@ -28,3 +28,14 @@ after_success:
   - docker push ddutjnrevenge93/multi-server
   - docker push ddutjnrevenge93/multi-worker
 
+deploy:
+  provider: elasticbeanstalk
+  region: "ap-southeast-1"
+  app: "multi-docker"
+  env: "MultiDocker-env"
+  bucket_name: "	elasticbeanstalk-ap-southeast-1-891377227663"
+  bucket_path: "docker-multi"
+  on:
+    branch: master
+  access_key_id: $AWS_ACCESS_KEY
+  secret_access_key: $AWS_SECRET_KEY
