--- a/.travis.yml
+++ b/.travis.yml
@@ -30,6 +30,7 @@ after_success:
 
 deploy:
   provider: elasticbeanstalk
+  edge: true
   region: "ap-southeast-1"
   app: "multi-docker"
   env: "MultiDocker-env"
@@ -39,3 +40,4 @@ deploy:
     branch: master
   access_key_id: $AWS_ACCESS_KEY
   secret_access_key: $AWS_SECRET_KEY
+  skip_cleanup: true
