modified travis config

--- a/.travis.yml
+++ b/.travis.yml
@@ -32,7 +32,7 @@ deploy:
   provider: elasticbeanstalk
   region: "ap-southeast-1"
   app: "multi-docker"
-  env: "MultiDocker-env"
+  env: "Multi-docker-env"
   bucket_name: "elasticbeanstalk-ap-southeast-1-891377227663"
   bucket_path: "docker-multi"
   on:
